--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
         <div class="container">
           <div class="columns">
             <div class="column">
-              <h1 class="title">
-                Extensions for <a href="http://bulma.io">Bulma.io</a>
+              <h1 class="title has-text-centered">
+                {{ title }}
               </h1>
-              <h2 class="subtitle">
-                A set of extension to improve Bulma
+              <h2 class="subtitle has-text-centered">
+                {{ subtitle }}
               </h2>
             </div>
           </div>
