--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
           <div class="columns">
             <div class="column">
               <h1 class="title has-text-centered">
-                {{ site.title }}
+                {{ page.title }}
               </h1>
               <h2 class="subtitle has-text-centered">
-                {{ site.subtitle }}
+                {{ page.subtitle }}
               </h2>
             </div>
           </div>
