--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <section class="hero is-primary is-medium">
+    <section class="hero is-primary">
       <div class="hero-body">
         <div class="container">
           <div class="columns">
