--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,9 @@
           </div>
         </div>
       </div>
+      <div class="hero-foot">
+        {% include subnav-bulma-extensions.html %}
+      </div>
     </section>
 
     {{ content }}
