--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="hero-foot">
-        
+        {% include subnav.html %}
       </div>
     </section>
 
