--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           </p>
         </div>
         <div class="column is-narrow">
-          {% include carbon.html %}
+
         </div>
       </div>
     </div>
@@ -36,28 +36,28 @@
       <nav class="tabs is-boxed">
         <ul>
           <li {% if page.doc-tab == 'overview' %}class="is-active"{% endif %}>
-            <a href="{{ site.documentation }}">Overview</a>
+            <a href="{{ site.index }}">Overview</a>
           </li>
           <li {% if page.doc-tab == 'modifiers' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/documentation/modifiers/syntax">Modifiers</a>
+            <a href="{{ site.url }}/modifiers/syntax">Modifiers</a>
           </li>
           <li {% if page.doc-tab == 'columns' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/documentation/columns/basics">Columns</a>
+            <a href="{{ site.url }}/columns/basics">Columns</a>
           </li>
           <li {% if page.doc-tab == 'layout' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/documentation/layout/container/">Layout</a>
+            <a href="{{ site.url }}/layout/container/">Layout</a>
           </li>
           <li {% if page.doc-tab == 'form' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/documentation/form/general">Form</a>
+            <a href="{{ site.url }}/form/general">Form</a>
           </li>
           <li {% if page.doc-tab == 'elements' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/documentation/elements/box/">Elements</a>
+            <a href="{{ site.url }}/elements/box/">Elements</a>
           </li>
           <li {% if page.doc-tab == 'components' %}class="is-active"{% endif %}>
             {% if site.vernum >= 43 %}
-              <a href="{{ site.url }}/documentation/components/breadcrumb/">Components</a>
+              <a href="{{ site.url }}/components/breadcrumb/">Components</a>
             {% else %}
-              <a href="{{ site.url }}/documentation/components/card/">Components</a>
+              <a href="{{ site.url }}/components/card/">Components</a>
             {% endif %}
           </li>
         </ul>
