--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,27 +38,8 @@
           <li {% if page.doc-tab == 'overview' %}class="is-active"{% endif %}>
             <a href="{{ site.index }}">Overview</a>
           </li>
-          <li {% if page.doc-tab == 'modifiers' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/modifiers/syntax">Modifiers</a>
-          </li>
-          <li {% if page.doc-tab == 'columns' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/columns/basics">Columns</a>
-          </li>
-          <li {% if page.doc-tab == 'layout' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/layout/container/">Layout</a>
-          </li>
-          <li {% if page.doc-tab == 'form' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/form/general">Form</a>
-          </li>
-          <li {% if page.doc-tab == 'elements' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/elements/box/">Elements</a>
-          </li>
-          <li {% if page.doc-tab == 'components' %}class="is-active"{% endif %}>
-            {% if site.vernum >= 43 %}
-              <a href="{{ site.url }}/components/breadcrumb/">Components</a>
-            {% else %}
-              <a href="{{ site.url }}/components/card/">Components</a>
-            {% endif %}
+          <li {% if page.doc-tab == 'bulma-extensions' %}class="is-active"{% endif %}>
+            <a href="{{ site.url }}/modifiers/syntax">Bulma Extensions</a>
           </li>
         </ul>
       </div>
