--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
             <a href="{{ site.index }}">Overview</a>
           </li>
           <li {% if page.doc-tab == 'bulma-extensions' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/modifiers/syntax">Bulma Extensions</a>
+            <a href="{{ site.url }}/bumal-extensions/badge">Bulma Extensions</a>
           </li>
         </ul>
       </div>
