--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
           <div class="columns is-vcentered">
             <div class="column">
               <p class="title">
-                Wikiki
+                Projects' documentation
               </p>
               <p class="subtitle">
-                This page is an access point to my sources
+                This site gathers documentation of my GitHub projects
               </p>
             </div>
             <div class="column is-narrow">
