--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
     <section class="section">
       <div class="container">
         <p class="has-text-centered has-text-grey-light">
-          This page is designed with <a href="https://bulma.io" target="_blank"><strong class="has-text-grey">Bulma CSS framework</strong></a>.
+          This page is designed with <a href="http://bulma.io" target="_blank"><strong class="has-text-grey">Bulma CSS framework</strong></a>.
         </p>
       </div>
     </section>
