--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
           <div class="columns is-vcentered">
             <div class="column">
               <p class="title">
-                Project's documentation
+                Documentation
               </p>
               <p class="subtitle">
                 This site gathers documentation of my GitHub projects
