--- a/documentation.sass
+++ b/documentation.sass
@@ -2,5 +2,14 @@
 ---
 @charset "utf-8"
 @import 'bulma/docs/bulma-docs.sass'
-@import '_sass/bulma-switch.sass'
-@import '_sass/bulma-checkradio.sass'
+@import '_sass/badge.sass'
+@import '_sass/calendar.sass'
+@import '_sass/checkradio.sass'
+@import '_sass/divider.sass'
+@import '_sass/pageloader.sass'
+@import '_sass/ribbon.sass'
+@import '_sass/slider.sass'
+@import '_sass/steps.sass'
+@import '_sass/switch.sass'
+@import '_sass/timeline.sass'
+@import '_sass/tooltip.sass'
