add pricing table page

--- a/documentation.sass
+++ b/documentation.sass
@@ -7,6 +7,7 @@
 @import '_sass/checkradio.sass'
 @import '_sass/divider.sass'
 @import '_sass/pageloader.sass'
+@import '_sass/pricing-table.sass'
 @import '_sass/ribbon.sass'
 @import '_sass/slider.sass'
 @import '_sass/steps.sass'
