Fix pricing table

--- a/_sass/pricing-table.sass
+++ b/_sass/pricing-table.sass
@@ -58,6 +58,13 @@ $pricing-price-background: white !default
         font-size: $size-1
         font-weight: $weight-bold
 
+        .plan-price-currency
+          vertical-align: super
+          font-size: $size-normal !important
+          font-weight: $weight-normal !important
+          color: $text
+          margin-right: .25rem
+
     .plan-action
       border-bottom-left-radius: $pricing-plan-border-radius
       border-bottom-right-radius: $pricing-plan-border-radius
