--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -8,31 +8,19 @@ $calendar-border-radius: $radius-small !default
   min-width: 28rem
   text-align: center
   .calendar-nav
-    -webkit-align-items: center
     align-items: center
     background: $primary
     color: $white
     border-top-left-radius: $radius-small
     border-top-right-radius: $radius-small
     display: flex
-    display: -ms-flexbox
-    display: -webkit-flex
-    -ms-flex-align: center
-    -webkit-box-align: center
-    -ms-flex-align: center
     align-items: center
-    -webkit-box-pack: justify
-    -ms-flex-pack: justify
     justify-content: space-between
     font-size: $size-4
     padding: .5rem
     .calendar-nav-left, .calendar-nav-right
-      -ms-flex-preferred-size: auto
       flex-basis: auto
-      -webkit-box-flex: 0
-      -ms-flex-positive: 0
       flex-grow: 0
-      -ms-flex-negative: 0
       flex-shrink: 0
       .button
         text-decoration: none
@@ -41,33 +29,19 @@ $calendar-border-radius: $radius-small !default
           background: transparent
           color: $grey-lighter
     .calendar-nav-left
-      -webkit-box-align: center
-      -ms-flex-align: center
       align-items: center
-      -webkit-box-pack: start
-      -ms-flex-pack: start
       justify-content: flex-start
     .calendar-nav-right
-      -webkit-box-align: center
-      -ms-flex-align: center
       align-items: center
-      -webkit-box-pack: end
-      -ms-flex-pack: end
       justify-content: flex-end
   .calendar-header, .calendar-body
     display: flex
     display: -ms-flexbox
     display: -webkit-flex
-    -ms-flex-pack: center
-    -webkit-flex-wrap: wrap
-    -ms-flex-wrap: wrap
     flex-wrap: wrap
-    -webkit-justify-content: center
     justify-content: center
     padding: .2rem 0
   .calendar-header .calendar-date, .calendar-body .calendar-date
-    -webkit-flex: 0 0 14.28%
-    -ms-flex: 0 0 14.28%
     flex: 0 0 14.28%
     max-width: 14.28%
   .calendar-header
@@ -80,8 +54,6 @@ $calendar-border-radius: $radius-small !default
     border: 0
     padding: .4rem
     .date-item
-      -webkit-appearance: none
-      -moz-appearance: none
       appearance: none
       background: transparent
       border: .1rem solid transparent
@@ -103,13 +75,13 @@ $calendar-border-radius: $radius-small !default
         border-color: $primary
         color: $primary
       &:focus
-        background: $grey-lighter
-        border-color: $grey-lighter
+        background: $white-ter
+        border-color: $white-ter
         color: $white
         text-decoration: none
       &:hover
-        background: $grey-lighter
-        border-color: $grey-lighter
+        background: $white-ter
+        border-color: $white-ter
         color: $grey
         text-decoration: none
       &.is-active
@@ -131,8 +103,6 @@ $calendar-border-radius: $radius-small !default
       position: absolute
       right: 0
       top: 50%
-      -webkit-transform: translateY(-50%)
-      -ms-transform: translateY(-50%)
       transform: translateY(-50%)
     &.range-start::before
       left: 50%
@@ -141,17 +111,13 @@ $calendar-border-radius: $radius-small !default
     .date-item
       color: $primary
 
-  &.is-calendar-large
+  &.is-large
     .calendar-body
       padding: 0
       .calendar-date
         border-bottom: $calendar-border
         border-right: $calendar-border
         display: flex
-        display: -ms-flexbox
-        display: -webkit-flex
-        -webkit-flex-direction: column
-        -ms-flex-direction: column
         flex-direction: column
         height: 11rem
         padding: 0
@@ -160,9 +126,7 @@ $calendar-border-radius: $radius-small !default
         &:nth-last-child(-n+7)
           border-bottom: 0
     .date-item
-      -webkit-align-self: flex-end
       align-self: flex-end
-      -ms-flex-item-align: end
       height: 2.8rem
       margin-right: .5rem
       margin-top: .5rem
@@ -175,9 +139,7 @@ $calendar-border-radius: $radius-small !default
       &.range-end::before
         right: 1.9rem
     .calendar-events
-      -webkit-flex-grow: 1
       flex-grow: 1
-      -ms-flex-positive: 1
       line-height: 1
       overflow-y: auto
       padding: .5rem
