--- a/_sass/steps.sass
+++ b/_sass/steps.sass
@@ -5,7 +5,6 @@ $steps-completed-color: $primary !default
 $steps-active-color: $primary !default
 $steps-divider-height: .2em !default
 
-// Use a mixin to define all ratios in the same spot
 =steps-size($size)
   font-size: $size
   min-height: $size * 2
@@ -99,7 +98,7 @@ $steps-divider-height: .2em !default
           .step-marker
             background-color: $white
             border-color: $color
-            color: $color-invert
+            color: $color
         &.is-completed
           &::before
             background-color: $color
