--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -47,7 +47,7 @@ $checkbox-border: .1rem solid $grey-light !default
 
   + label
     position: relative
-    display: block
+    display: inline-block
     cursor: pointer
     vertical-align: middle
 
