Fix inline display

--- a/_sass/switch.sass
+++ b/_sass/switch.sass
@@ -16,10 +16,9 @@ $switch-paddle-transition: all 0.25s ease-out !default
 
   + label
     position: relative
-    display: flex
+    display: inline-block
     font-size: $size
     padding-left: $switch-width + .5
-    // Resetting these <label> presets so type styles cascade down
     cursor: pointer
 
     &::before
