--- a/_sass/pricing-table.sass
+++ b/_sass/pricing-table.sass
@@ -138,7 +138,7 @@ $pricing-price-background: white !default
               border-color: transparent
               box-shadow: none
 
-=tablet
++tablet
   .pricing-table
     &.is-horizontal
       .pricing-plan
