--- a/_sass/slider.sass
+++ b/_sass/slider.sass
@@ -5,7 +5,7 @@ $slider-track-radius: $radius !default
 $slider-thumb-radius: $radius !default
 
 =slider-size($size)
-  height: $size * 2
+  margin: $size * 2
   &::-webkit-slider-thumb
     height: $size * 1.2
     width: $size * 1.2
@@ -23,7 +23,7 @@ $slider-thumb-radius: $radius !default
   &::-moz-range-track
     height: $size / 2.5
   &::-ms-track
-    height: $size / 2.5
+    height: $size
 
 .slider
   -webkit-appearance: none
@@ -117,6 +117,8 @@ $slider-thumb-radius: $radius !default
 
   &::-ms-fill-lower
     background: $primary
+  &::-ms-fill-upper
+    background: $slider-track-background
 
   +slider-size($size-normal)
   &.is-small
@@ -134,5 +136,5 @@ $slider-thumb-radius: $radius !default
         background: $color
       &::-webkit-slider-runnable-track
         background: $color
-      &::-ms-track
+      &::-ms-fill-lower
         background: $color !important
