--- a/_sass/slider.sass
+++ b/_sass/slider.sass
@@ -5,8 +5,8 @@ $slider-track-radius: $radius !default
 $slider-thumb-radius: $radius !default
 
 =slider-size($size)
-  margin-top: $size
-  margin-bottom: $size
+  margin-top: $size / 2
+  margin-bottom: $size / 2
   height: $size * 2
   &::-webkit-slider-thumb
     height: $size * 1.2
