--- a/_sass/slider.sass
+++ b/_sass/slider.sass
@@ -15,8 +15,8 @@ $slider-thumb-radius: $radius !default
     height: $size * 1.2
     width: $size * 1.2
   &::-ms-thumb
-    height: $size * 2.2
-    width: $size * 2.2
+    height: $size * 1.2
+    width: $size * 1.2
   &::-webkit-slider-thumb
     -webkit-appearance: none
     margin-top: -( $size / 2 )
@@ -104,17 +104,20 @@ $slider-thumb-radius: $radius !default
 
   &::-webkit-slider-runnable-track
     background: $slider-track-background
+    border: 0px
     border-radius: $slider-track-radius
     width: 100%
 
   &::-moz-range-track
     background: $slider-track-background
+    border: 0px
     border-radius: $slider-track-radius
     width: 100%
 
   &::-ms-track
     background: $slider-track-background
     border-radius: $slider-track-radius
+    border: 0px
     width: 100%
   &::-ms-fill-lower
     background: $primary
