--- a/_sass/slider.sass
+++ b/_sass/slider.sass
@@ -114,8 +114,8 @@ $slider-thumb-radius: $radius !default
 
   &::-ms-track
     /* Hides the slider so custom styles can be added */
-    background: transparent; 
-    border-color: transparent;
+    background: transparent
+    border-color: transparent
     color: transparent
     border-radius: $slider-track-radius
     width: 100%
