Add slider value / JS sample

--- a/_sass/tooltip.sass
+++ b/_sass/tooltip.sass
@@ -4,7 +4,7 @@
     background: rgba(69, 77, 93, 0.9)
     border-radius: $radius
     bottom: 100%
-    color: #fff
+    color: $white
     content: attr(data-tooltip)
     display: block
     font-size: $size-7
