--- a/_sass/slider.sass
+++ b/_sass/slider.sass
@@ -3,9 +3,9 @@ $slider-track-background: $grey-light !default
 $slider-track-radius: $radius !default
 $slider-track-border: 0px solid $grey !default
 $slider-track-shadow: 0px 0px 0px $grey !default
-$slider-thumb-background: $primary !default
+$slider-thumb-background: $white !default
 $slider-thumb-radius: $radius !default
-$slider-thumb-border: 1px solid $white-ter !default
+$slider-thumb-border: 1px solid $grey-light !default
 $slider-thumb-shadow: none !default
 $slider-output-width: 3rem !default
 $slider-output-background: $grey-dark !default
@@ -137,7 +137,7 @@ input[type=range]
       box-shadow: $slider-thumb-shadow
       border: $slider-thumb-border
       border-radius: $slider-thumb-radius
-      background: darken( $slider-thumb-background, 10% )
+      background: $slider-thumb-background
       cursor: pointer
       -webkit-appearance: none
       transition: transform .2s ease, -webkit-transform .2s ease
@@ -146,7 +146,7 @@ input[type=range]
     &::-moz-range-thumb
       box-shadow: $slider-thumb-shadow
       border: $slider-thumb-border
-      background: darken( $slider-thumb-background, 10% )
+      background: $slider-thumb-background
       border-radius: $slider-thumb-radius
       cursor: pointer
       transition: transform .2s ease, -webkit-transform .2s ease
@@ -155,7 +155,7 @@ input[type=range]
     &::-ms-thumb
       box-shadow: $slider-thumb-shadow
       border: $slider-thumb-border
-      background: darken( $slider-thumb-background, 10% )
+      background: $slider-thumb-background
       border-radius: $slider-thumb-radius
       cursor: pointer
       transition: transform .2s ease, -webkit-transform .2s ease
@@ -215,13 +215,6 @@ input[type=range]
           background: $color !important
         &::-ms-fill-lower
           background: $color
-
-        &::-webkit-slider-thumb
-          background: darken( $color, 10% )
-        &::-moz-range-thumb
-          background: darken( $color, 10% )
-        &::-ms-thumb
-          background: darken( $color, 10% )
 
         &.has-output,
         .has-output-tooltip
