--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -50,6 +50,7 @@ $checkbox-border: .1rem solid $grey-light !default
     display: inline-block
     cursor: pointer
     vertical-align: middle
+    margin-right: 1rem
 
     &:hover
       &::before
@@ -146,6 +147,8 @@ $checkbox-border: .1rem solid $grey-light !default
           &::before
             border-color: $color !important
             background-color: $color !important
+          &::after
+            border-color: $color-invert !important
 
 
 .is-radio[type="radio"]
