--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -149,6 +149,7 @@ $checkbox-border: .1rem solid $grey-light !default
             background-color: $color !important
           &::after
             border-color: $color-invert !important
+            background-color: $color !important
 
 
 .is-radio[type="radio"]
@@ -181,4 +182,5 @@ $checkbox-border: .1rem solid $grey-light !default
           &::before
             border-color: $color !important
           &::after
+            border-color: $color !important
             background-color: $color !important
