Add quickview documentation

--- a/documentation.sass
+++ b/documentation.sass
@@ -8,6 +8,7 @@
 @import '_sass/divider.sass'
 @import '_sass/pageloader.sass'
 @import '_sass/pricing-table.sass'
+@import '_sass/quickview.sass'
 @import '_sass/ribbon.sass'
 @import '_sass/slider.sass'
 @import '_sass/steps.sass'
