Fix tooltip background color

--- a/_sass/tooltip.sass
+++ b/_sass/tooltip.sass
@@ -16,7 +16,7 @@
       font-size: $size-7
       padding: .4rem .8rem
       transform: translate(-50%, 1rem)
-      background: rgba(69, 77, 93, 0.9)
+      background: rgba($grey-dark, 0.9)
       border-radius: $radius
       color: $white
       max-width: 24rem
