--- a/_sass/tooltip.sass
+++ b/_sass/tooltip.sass
@@ -10,6 +10,10 @@ $tooltip-max-width: 24rem !default
       position: absolute
       display: inline-block
       pointer-events: none
+    &:before
+      content: ""
+      border-style: solid
+      border-width: .5rem
     &::after
       opacity: 0
       content: attr(data-tooltip)
@@ -24,13 +28,22 @@ $tooltip-max-width: 24rem !default
       color: $white
       max-width: $tooltip-max-width
 
-  &:focus::after,
-  &:hover::after
-    top: auto
-    bottom: 100%
-    left: 50%
-    opacity: 1
-    transform: translate(-50%, -0.5rem)
+  &:focus,
+  &:hover
+    &::before
+      top: 0
+      bottom: auto
+      left: 50%
+      opacity: 1
+      margin-left: -.5rem
+      margin-top: -.5rem
+      border-color: rgba($tooltip-background-color, 0.9) transparent transparent transparent
+    &::after
+      top: auto
+      bottom: 100%
+      left: 50%
+      opacity: 1
+      transform: translate(-50%, -0.5rem)
 
   &.is-tooltip-right
     &::after
@@ -39,9 +52,16 @@ $tooltip-max-width: 24rem !default
       left: 100%
       right: auto
       transform: translate(-1rem, 50%)
-    &:focus::after,
-    &:hover::after
-      transform: translate(0.5rem, 50%)
+    &:focus,
+    &:hover
+      &::before
+        top: 50%
+        left: 100%
+        right: auto
+        border-color: transparent rgba($tooltip-background-color, 0.9) transparent transparent
+      &::after
+        transform: translate(0.5rem, 50%)
+
   &.is-tooltip-bottom
     &::after
       top: 100%
@@ -49,9 +69,17 @@ $tooltip-max-width: 24rem !default
       left: 50%
       right: auto
       transform: translate(-50%, -1rem)
-    &:focus::after,
-    &:hover::after
-      transform: translate(-50%, 0.5rem)
+    &:focus,
+    &:hover
+      &::before
+        top: 100%
+        bottom: auto
+        left: 50%
+        right: auto
+        border-color: transparent transparent rgba($tooltip-background-color, 0.9) transparent
+      &::after
+        transform: translate(-50%, 0.5rem)
+
   &.is-tooltip-left
     &::after
       top: auto
@@ -59,9 +87,15 @@ $tooltip-max-width: 24rem !default
       left: auto
       right: 100%
       transform: translate(1rem, 50%)
-    &:focus::after,
-    &:hover::after
-      transform: translate(-0.5rem, 50%)
+    &:focus,
+    &:hover
+      &::before
+        top: 50%
+        left: auto
+        right: calc(100% - .5rem)
+        border-color: transparent transparent transparent rgba($tooltip-background-color, 0.9)
+      &::after
+        transform: translate(-0.5rem, 50%)
 
   &.is-tooltip-multiline
     &::after
@@ -69,3 +103,22 @@ $tooltip-max-width: 24rem !default
       text-overflow: clip
       white-space: normal
       word-break: break-word
+
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+    $color-invert: nth($pair, 2)
+    &.is-tooltip-#{$name}
+      &::before
+        border-color: rgba($color, 0.9) transparent transparent transparent
+      &.is-tooltip-right
+        &::before
+          border-color: transparent rgba($color, 0.9) transparent transparent
+      &.is-tooltip-bottom
+        &::before
+          border-color: transparent transparent rgba($color, 0.9) transparent
+      &.is-tooltip-left
+        &::before
+          border-color: transparent transparent transparent rgba($color, 0.9)
+      &::after
+        background: rgba($color, 0.9)
+        color: $color-invert
