--- a/_sass/divider.sass
+++ b/_sass/divider.sass
@@ -12,7 +12,7 @@ $divider-color: $grey-light !default
   content: attr(data-content)
   display: inline-block
   font-size: $divider-font-size
-  padding: 0 .8rem
+  padding: .5rem .8rem
   -webkit-transform: translateY(-1.1rem)
   -ms-transform: translateY(-1.1rem)
   transform: translateY(-1.1rem)
